# rdfm

./: CHANGELOG.md  Cargo.toml  Makefile.gnu-linux  Makefile.macOS  README.md  configure  rdfm.1
homebruh/: bruh.toml  rdfm-0.1.1.bpkg
src/: add.rs  bin.rs  errors.rs  get_files.rs  lib.rs  link.rs  main.rs  proceed.rs  pull.rs  setup.rs
