[package]
name = "rdfm"
version = "0.1.2"
authors = ["Wafelack <wafelack@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rdfm"
path = "src/bin.rs"

[lib]
name = "rdfm_lib"
path = "src/lib.rs"

[dependencies]
clap = "2.33.3"
