[package]
name = "rdfm"
version = "0.1.3"
authors = ["Wafelack <wafelack@protonmail.com>"]
edition = "2018"
repository = "https://github.com/wafelack/rdfm"
homepage = "https://github.com/wafelack/rdfm"
license = "GPL-3.0"
description = "A rusty dotfiles manager."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
